Set overflow-x hidden for slick-list element to prevent horizontal scroll

--- a/app/assets/stylesheets/survey_modules/slider.styl
+++ b/app/assets/stylesheets/survey_modules/slider.styl
@@ -16,6 +16,7 @@
 .slick-list
   position relative
   display block
+  overflow-x hidden
   margin 0
   padding 0
   &:focus
